<resources>
    <string name="s1">Playlist maker</string>
    <string name="s2">Поиск</string>
    <string name="s3">Медиатека</string>
    <string name="s4">Настройки</string>

    <string name="t1">Настройки</string>
    <string name="t2">Темная тема</string>
    <string name="t3">Поделиться приложением</string>
    <string name="t4">Написать в поддержку</string>
    <string name="t5">Пользовательское соглашение</string>

    <string name="w1">Поиск</string>

    <string name="e1">ЭКРАН Activiti_Media</string>
    <string name="e2">ЭКРАН Activiti_Search</string>

    <string name="g1">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="g2">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="g3">https://yandex.ru/legal/practicum_offer/</string>
    <string name="g4">https://practicum.yandex.ru/android-developer/</string>
    <string name="g5">em2s@gmail.com</string>

</resources>