<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingActivityDayLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/paddingVertical20"
    tools:context=".SettingsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/paddingVertical20">

        <ImageView
            android:id="@+id/setting_button_back2"
            style="@style/SettingActivityDayImageVector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="8dp" />

        <TextView
            style="@style/SettingActivityDayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="48dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/t1"
            android:textSize="@dimen/textSize" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/paddingVertical20">

        <TextView
            style="@style/SettingActivityDayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/t2"
            android:textSize="@dimen/textSize20" />

        <ImageView
            style="@style/SettingActivityImageControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/layout_marginTop8" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/paddingVertical20">

        <TextView
            style="@style/SettingActivityDayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/t3"
            android:textSize="@dimen/textSize20" />

        <ImageView
            android:id="@+id/sendLinks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/layout_marginTop8"
            android:src="@drawable/links" />
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/paddingVertical20">

        <TextView
            style="@style/SettingActivityDayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/t4"
            android:textSize="@dimen/textSize20" />

        <ImageView
            android:id="@+id/mailSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/layout_marginTop8"
            android:src="@drawable/dispetcher" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/paddingVertical20">

        <TextView
            style="@style/SettingActivityDayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/t5"
            android:textSize="@dimen/textSize20" />

        <ImageView
            android:id="@+id/links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/layout_marginTop8"
            android:src="@drawable/left" />
    </FrameLayout>


</LinearLayout>